<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="unknown">Unknown</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>

    <string name="error_modal_default_title">There was a problem</string>
    <string name="copied_to_clipboard">Copied to Clipboard!</string>
    <string name="account_key_copied_to_clipboard">Account key copied to clipboard!</string>
    <string name="error_message_generic">Looks like something went wrong. Please try again.</string>

    <string name="key_display_system_program">System Program</string>
    <string name="key_display_config_program">Config Program</string>
    <string name="key_display_ed25519_program">Ed25519 Program</string>
    <string name="key_display_secp256k1_program">Secp256k1 Program</string>
    <string name="key_display_stake_program">Stake Program</string>
    <string name="key_display_vote_program">Vote Program</string>
    <string name="key_display_memo_program">Memo Program</string>
    <string name="key_display_testnet_faucet">Testnet Faucet</string>
    <string name="key_display_devnet_faucet">Devnet Faucet</string>
    <string name="key_display_bpf_loader_program">BPF Loader Program</string>

    <string name="transaction_details_badge_writer">Writer</string>
    <string name="transaction_details_badge_signer">Signer</string>
    <string name="transaction_details_badge_fee_payer">Fee Payer</string>
    <string name="transaction_details_badge_program">Program</string>
    <string name="transaction_details_section_recent_blockhash">Recent Blockhash</string>
    <string name="transaction_details_screen_title">Transaction Details</string>
    <string name="transaction_details_section_title_signatures">Signatures</string>
    <string name="transaction_details_section_title_signature">Signature</string>
    <string name="transaction_details_section_memo">Memo text</string>
    <string name="transaction_details_section_slot">Slot</string>
    <string name="transaction_details_section_amount">Amount</string>
    <string name="transaction_details_section_block_time">Block time</string>
    <string name="transaction_details_section_fee">Fee</string>
    <string name="transaction_details_accounts">Accounts</string>
    <string name="transaction_details_logs">Logs</string>
    <string name="transaction_details_account_details_balance_label">Balance after transaction:</string>
</resources>