<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_small">

    <TextView
        android:id="@+id/change_in_balance"
        style="@style/TextAppearance.SolExplore.Label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_key"
        style="@style/TransactionDetails.Value"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/change_in_balance"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/balance_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/metadata_row"
        app:layout_constraintEnd_toEndOf="@id/account_key"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/account_key"
        app:layout_constraintTop_toBottomOf="@id/account_key">

        <TextView
            style="@style/TextAppearance.SolExplore.Label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_xsmall"
            android:text="@string/transaction_details_account_details_balance_label"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/balance_after"
            style="@style/TextAppearance.SolExplore.Label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/metadata_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/account_key"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/account_key"
        app:layout_constraintTop_toBottomOf="@id/balance_wrapper">

        <TextView
            android:id="@+id/writer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_writer" />

        <TextView
            android:id="@+id/signer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_signer" />

        <TextView
            android:id="@+id/fee_payer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_fee_payer" />

        <TextView
            android:id="@+id/program_badge"
            style="@style/TransactionDetails.Badge.Program"
            android:text="@string/transaction_details_badge_program" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>